# platform.core.connectivity.bluetooth-tools

./: CMakeLists.txt  bluetooth-tools.manifest  project.config
debian/: bluetooth-tools.install.in  changelog  control  rules
packaging/: bluetooth-address.service  bluetooth-tools.changes  bluetooth-tools.spec
scripts/: CMakeLists.txt  bluetooth-address  bt-dev-end.sh  bt-dev-start.sh  bt-edutm-dev-up.sh  bt-edutm-mode-on.sh  bt-edutm-off.sh  bt-edutm-on.sh  bt-hci-logdump.sh  bt-reset-env.sh  bt-run-hcidump.sh  bt-stack-down.sh  bt-stack-up.sh
scripts/etc/: bt-reset-env.sh  bt-stack-down.sh  bt-stack-up.sh
scripts/mobile/: bt-reset-env.sh  bt-stack-down.sh  bt-stack-up.sh
scripts/wearable/: bt-reset-env.sh  bt-stack-down.sh  bt-stack-up.sh
